<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_tomar_foto"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/action_tomar_foto"
        android:visible="false"
        app:showAsAction="withText|ifRoom" />
    <item
        android:id="@+id/action_evidencias"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_modo_off_on"
        android:orderInCategory="100"
        android:title="@string/action_modo_off_on"
        app:showAsAction="never" />
</menu>
